# methurator

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  environment.yml  index.html  pyproject.toml  search.html  setup.cfg  sitemap.xml  versions.json
.github/workflows/: build_docs.yml  dev_docs.yml  pre-commit.yml  publish.yml  unit_test.yml
2.0.0/: 404.html  index.html  search.html  sitemap.xml
2.0.0/commands/downsample/: index.html
2.0.0/commands/gt_estimator/: index.html
2.0.0/commands/plot/: index.html
2.0.0/installation/: index.html
2.0.0/methodology/: index.html
2.0.0/quickstart/: index.html
2.0.0/workflow/: index.html
2.1.0/: 404.html  index.html  sitemap.xml
2.1.0/commands/downsample/: index.html
2.1.0/commands/gt_estimator/: index.html
2.1.0/commands/plot/: index.html
2.1.0/installation/: index.html
2.1.0/methodology/: index.html
2.1.0/quickstart/: index.html
2.1.0/search/: search_index.json
2.1.0/workflow/: index.html
2.2.0/: 404.html  index.html  sitemap.xml
2.2.0/commands/downsample/: index.html
2.2.0/commands/gt_estimator/: index.html
2.2.0/commands/plot/: index.html
2.2.0/installation/: index.html
2.2.0/methodology/: index.html
2.2.0/quickstart/: index.html
2.2.0/workflow/: index.html
2.3.0/: 404.html  index.html  sitemap.xml
2.3.0/commands/downsample/: index.html
2.3.0/commands/gt_estimator/: index.html
2.3.0/commands/plot/: index.html
2.3.0/installation/: index.html
2.3.0/methodology/: index.html
2.3.0/quickstart/: index.html
2.3.0/workflow/: index.html
2.4.0/: 404.html  index.html  search.html  sitemap.xml
2.4.0/commands/downsample/: index.html
2.4.0/commands/gt_estimator/: index.html
2.4.0/commands/plot/: index.html
2.4.0/installation/: index.html
2.4.0/methodology/: index.html
2.4.0/quickstart/: index.html
2.4.0/workflow/: index.html
commands/downsample/: index.html
commands/gt_estimator/: index.html
commands/plot/: index.html
develop/: 404.html  index.html  sitemap.xml
develop/commands/downsample/: index.html
develop/commands/gt_estimator/: index.html
develop/commands/plot/: index.html
develop/methodology/: index.html
develop/quickstart/: index.html
develop/search/: search_index.json
develop/workflow/: index.html
docs/: mkdocs.yml  yaml_summary.md
docs/docs/: index.md  methodology.md
docs/docs/commands/: downsample.md  gt_estimator.md  plot.md
docs/mkdocs/docs/: index.md  quickstart.md  workflow.md
installation/: index.html
latest/: 404.html  index.html  search.html  sitemap.xml
latest/commands/downsample/: index.html
latest/commands/gt_estimator/: index.html
latest/commands/plot/: index.html
latest/methodology/: index.html
latest/quickstart/: index.html
latest/search/: search_index.json
latest/workflow/: index.html
methodology/: index.html
methsaturator/: __init__.py  bam_dir_utils.py  bam_utils.py  cleanup_utils.py  cli.py  config.py  coverage_utils.py  downsample.py  fasta_utils.py  methsaturator.py  methyldackel.py  percentage_utils.py  plot.py  plot_seqstat.py  run.py  subsample_bam.py
methsaturator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
methsaturator/config_utils/: bam_dir_utils.py  config.py  config_validator.py  fasta_utils.py  validate_utils.py  validation_utils.py
methsaturator/downsample_utils/: methyldackel.py  run_processing.py  subsample_bam.py
methsaturator/plot_utils/: math_model.py  plot_checker.py  plot_curve.py  plot_functions.py  select_sample.py
methurator/: __init__.py  cli.py  downsample.py  gt_estimator.py  plot.py
methurator/config_utils/: bam_dir_utils.py  config_formatter.py  config_validator.py  download_reference.py  validation_utils.py
methurator/downsample_utils/: methyldackel.py  run_processing.py  yaml_summary.py
methurator/gt_utils/: config_validator.py  run_estimator.py  yaml_summary.py
methurator/plot_utils/: plot_checker.py  plot_curve.py  plot_functions.py  plot_gtestimator.py
quickstart/: index.html
search/: search_index.json
tests/: test_bam_utils.py  test_coverage_utils.py  test_downsample_pip.py  test_fasta_utils.py  test_percentage_utils.py  test_plot_pip.py  test_subsample_bam.py  test_summary_files_validation.py
tests/data/: Ecoli.0.5.csorted.bam  Ecoli.csorted.bam  Ecoli.csorted.bam.bai  Ecoli.qsorted.bam  Ecoli.unsorted.bam  Ecoli_CpG.bedGraph  methurator_cpgs_summary.csv  methurator_gtsummary.yml  methurator_reads_summary.csv  methurator_summary.yml
workflow/: index.html
