[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=61" ]

[project]
name = "methsaturator"
version = "0.1.0"
description = "Package for sequencing saturation analysis of sequencing methylation data."
readme = "README.md"
keywords = [
  "bioinformatics",
  "biology",
  "BSseq",
  "methylation",
  "RRBS",
]
license = { file = "LICENSE" }
authors = [
  { name = "Edoardo Giuili", email = "edoardo.giuili@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "matplotlib",
  "numpy",
  "packaging>=24",
  "pandas",
  "pyfaidx",
  "pysam",
  "rich",
  "rich-click",
  "scipy",
  "tqdm",
]

urls.Changelog = "https://github.com/VIBTOBIlab/methsaturator/blob/main/CHANGELOG.md"
urls.Documentation = "https://github.com/VIBTOBIlab/methsaturator"
urls.Issues = "https://github.com/VIBTOBIlab/methsaturator/issues"
urls.Repository = "https://github.com/VIBTOBIlab/methsaturator"
urls.scripts = "methsaturator.methsaturator:run_cli"

[tool.black]
line-length = 88
target-version = [ 'py311' ]

[tool.isort]
profile = "black"
