[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=61" ]

[tool.setuptools]
packages = ["methsaturator"]

[project]
name = "methsaturator"
version = "0.1.0"
description = "Package for sequencing saturation analysis of sequencing methylation data."
readme = "README.md"
keywords = [
  "bioinformatics",
  "biology",
  "BSseq",
  "methylation",
  "RRBS",
]
license = { file = "LICENSE" }
authors = [
  { name = "Edoardo Giuili", email = "edoardogiuili@gmail.com" },
]
requires-python = ">=3.10, <3.14" # change to >=3.10
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "matplotlib",
  "numpy",
  "packaging>=24",
  "pandas",
  "pyfaidx",
  "pysam",
  "rich",
  "rich-click",
  "scipy",
  "tqdm",
  "plotly"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist"
]

[project.urls]
Changelog = "https://github.com/VIBTOBIlab/methsaturator/blob/main/CHANGELOG.md"
Documentation = "https://github.com/VIBTOBIlab/methsaturator"
Issues = "https://github.com/VIBTOBIlab/methsaturator/issues"
Repository = "https://github.com/VIBTOBIlab/methsaturator"

[project.scripts]
methsaturator = "methsaturator.cli:entry_point"

[tool.black]
line-length = 88
target-version = [ 'py311' ]

[tool.isort]
profile = "black"
