[metadata]
name = methsaturator
version = attr: methsaturator.__version__
description = Package for sequencing saturation analysis of sequencing methylation data.
author = Edoardo Giuili
license = MIT

[options]
packages = find:
install_requires =
    pysam
    pyfaidx

[options.entry_points]
console_scripts =
    methsaturator = methsaturator.methsaturator:run_cli
